# mybackup

./: README.md
backup_sr/: asciiname-player_script-2.4.1.tar.xz
config/: .Xresources  .bashrc  .fbtermrc  .gitconfig  .gtkrc-2.0  .inputrc  .lesshst  .tmux.conf  .xinitrc  .xserverrc  RhythmCat.tar.xz  inputrc.old  user-dirs.dirs
config/.fvwm/: .fvwm2rc
config/.moc/: aop.m3u  classcal.m3u  config  keymap  playlist.m3u
config/.moc/themes/: user_moca_theme
config/.vim/: gvimrc  vim.bundles  vim.keymap  vim.linux  vim.windows  vimrc
config/compiz-1/compizconfig/: Default.ini
config/fontconfig/conf.d/: 10-base.conf  10-user.conf  60-latin-free.conf
config/gtk-3.0/: bookmarks  settings.ini
config/i3/: config  config-bk
config/i3status/: config
share/: ubuntu-themes.tar.xz
share/GRUB-themes/: books.tar.xz
share/GRUB-themes/icon/: icons.tar.xz  icons_32px.tar.xz  icons_48px.tar.xz
src&note/: 定期备份文件.md
src&note/android/: adb.md  adb_tmp.md  android_apk.md  compier_android.md
src&note/develop/c&cxx/: JNI.md  c.md  cxx.md  gcc.md  lib_call.md  network.md  operator_priority.md  shared_mem.md  strlen_sizeof.md  thread.md  函数指针与指针函数.md  (+3 more)
src&note/develop/c&cxx/src/c_test/io/read_write/: Makefile  Makefile.in  config.h  config.h.in  configure.in
src&note/develop/c&cxx/src/c_test/io/read_write/src/: fgets_test.c  fileutil.c  fileutil.h  fsize.c  test.c
src&note/win/: Firefox.md  Firefox插件小配置.md  Markdown标记语法.md  windows8.md  windows使用过程中遇到的一些问题.md  windows控制台命令学习笔记.md  数字电视wifi配置小记.md  文件关联项.md  更改右键菜单的注册表操作.md  注册表笔记.md  用注册表管理右键菜单.md  路由知识.md
(+704 files in other folders)
