AC_INIT(src/test.c)
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CC_C_O
AC_PROG_CPP()
AC_PROG_INSTALL()
AC_PROG_LEX()
AC_PROG_LN_S()
AC_PROG_RANLIB()
AC_PROG_YACC()
AC_CONFIG_HEADER(config.h)
AC_CHECK_HEADERS([unistd.h fcntl.h sys/types.h sys/errno.h errno.h])
AC_CHECK_HEADERS([src/fileutil.h])
AC_OUTPUT([Makefile])
